@@ -12,6 +12,7 @@ from zope.component.interfaces import IFactory
 from zope.component import getMultiAdapter
 from zope.component import getUtility
 from zope.container.interfaces import IContainerModifiedEvent
+from zope.lifecycleevent import ObjectMovedEvent
 
 import logging
 
@@ -54,3 +55,26 @@ def content_added(obj, event):
     if library is not None:
         library_uid = content_api.get_uuid(library)
     annotations[constants.LIBRARY_ANNOTATION_KEY] = library_uid
+
+
+def content_moved(obj, event):
+    new_parent = getattr(event, 'newParent', None)
+    old_parent = getattr(event, 'oldParent', None)
+
+    if new_parent and old_parent and new_parent != old_parent:
+        library = library_utils.get_library(obj)
+        annotations = IAnnotations(obj)
+        existing_lib_uid = annotations.get(constants.LIBRARY_ANNOTATION_KEY, None)
+        modified = False
+        if library is not None:
+            library_uid = content_api.get_uuid(library)
+            if library_uid != existing_lib_uid:
+                modified = True
+                annotations[constants.LIBRARY_ANNOTATION_KEY] = library_uid
+
+        if existing_lib_uid and library is None:
+            modified = True
+            annotations[constants.LIBRARY_ANNOTATION_KEY] = None
+
+        if modified:
+            obj.reindexObject()
